--- a/snacks_backend_web/.settings/org.eclipse.wst.common.component
+++ b/snacks_backend_web/.settings/org.eclipse.wst.common.component
@@ -11,6 +11,6 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/snacks_backend_web/target/classes"/>
-        <property name="context-root" value="backend"/>
+        <property name="context-root" value="snacks_backend_web"/>
     </wb-module>
 </project-modules>
