--- a/snacks_front_web/src/main/webapp/css/main.css
+++ b/snacks_front_web/src/main/webapp/css/main.css
@@ -1,33 +1,37 @@
 body {padding-top: 90px;}
+
+a{color: black;cursor: pointer;}
+a:active{color: #E50000;font-weight: bold;}
+a:visited{color: #E50000;font-weight: bold;text-decoration: none;cursor: pointer;}
+a:hover{color: orangered;font-weight: bold;text-decoration: none;cursor: pointer;}
+
 ul li{padding: 0px;margin: 0px;}
 .navbar{height: 80px;}
 .navbar #nav_content{height: 80px;width: 75%;margin: 0px auto;}
 #line{width:100%;height: 5px;background-color: #FE6767;}
-#logo{line-height: 80px;float: left;}
+#logo{float: left;margin-top:20px;}
 #menu{float: left;line-height: 80px;}
 #menu ul li{float: left;list-style: none;margin-left:20px;}
 #search{float: right;margin-top: 22px;padding-right: 40px;}
 #search #searchBox{float: left;width: 210px;}
 #search #searchBtn{float: left;width: 50px;}
 #loginAndShoppingCare{width: 110px;float: right;line-height: 80px;}
-#loginAndShoppingCare a{margin-left: 15px;}
-#loginAndShoppingCare a{color: black;cursor: pointer;}
-#loginAndShoppingCare a:active{color: #E50000;font-weight: bold;}
-#loginAndShoppingCare a:visited{color: #E50000;font-weight: bold;text-decoration: none;cursor: pointer;}
-#loginAndShoppingCare a:hover{color: orangered;font-weight: bold;text-decoration: none;cursor: pointer;}
 
-#body_content{width: 100%;height: 3810px;padding-bottom: 100px;}
+
+#body_content{width: 100%;height:5100px;padding-bottom: 100px;}
 #body_content #myCarousel img{width: 100%;height: 480px;}
 #body_content #menu_category{width: 75%;margin: 0px auto;margin-top: 5px;min-height: 140px;}
 #body_content #menu_category ul{margin: 0px auto;padding: 0px;}
 #body_content #menu_category ul li{border: 1px solid ghostwhite;list-style: none;float: left;padding:40px 70px;font-size: 18px;font-weight: bold;color:dimgray;margin-right: 10px;}
+#body_content #menu_category ul li:HOVER{-moz-box-shadow: 0px 0px 7px 5px ghostwhite;box-shadow: 0px 0px 7px 5px ghostwhite;color:#FE6767;}
 #body_content #menu_category ul li span{margin-left: 10px;}
 
-#body_content #new_goods_recommend{width:75%;min-height:2700px;margin: 0px auto;margin-top: 15px;}
-#body_content #new_goods_recommend .new_reco{font-size: 18px;color: dimgrey;color: orangered;font-weight: bold;}
+#body_content #new_goods_recommend{width:75%;min-height:4000px;margin: 0px auto;margin-top: 15px;}
+#body_content #new_goods_recommend .new_reco{font-size: 18px;color: #FE6767;font-weight: bold;}
 #body_content #new_goods_recommend .new_goods_list{padding-bottom: 10px;}
 #body_content #new_goods_recommend .new_goods_list .new_goods_first{min-height:330px;padding: 0px;margin-top: 10px;}
 #body_content #new_goods_recommend .new_goods_list .new_goods_first li{list-style: none;float: left;border: 1px solid ghostwhite;border-radius: 7px;margin-right: 8px;width: 277px;padding-bottom: 15px;margin-bottom: 10px;}
+#body_content #new_goods_recommend .new_goods_list .new_goods_first li:HOVER{-moz-box-shadow: 0px 0px 20px 5px gray;box-shadow: 0px 0px 20px 5px gray;}
 #body_content #new_goods_recommend .new_goods_list .new_goods_first li img{border-radius: 7px 7px 0px 0px;}
 #body_content #new_goods_recommend .new_goods_list .new_goods_first li span img{margin-left: 15px;}
 #body_content #new_goods_recommend .new_goods_list .new_goods_first li span span{margin-left: 5px;}
